# Online-Queue

./: README.md
oqueue-flutter/: .packages  packages.md  pubspec.yaml
oqueue-flutter/.dart_tool/: package_config.json  package_config_subset
oqueue-flutter/.dart_tool/flutter_build/86ced77581cf680a5d5bf1b1acceb6ed/: .filecache  android_aot_bundle_release_android-arm.stamp  android_aot_bundle_release_android-arm64.stamp  android_aot_bundle_release_android-x64.stamp  android_aot_release_android-arm.stamp  android_aot_release_android-arm64.stamp  android_aot_release_android-x64.stamp  aot_android_asset_bundle.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
oqueue-flutter/.dart_tool/flutter_build/c6e6b2022a3df8020a7f4c96a4ca5e4e/: .filecache  debug_android_application.stamp  (+4 more)
oqueue-flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
oqueue-flutter/lib/: api.dart  auth_screen.dart  domain.dart  main.dart  queue_list_screen.dart  queue_screen.dart
oqueue-server/: .env_example  .gitignore  Cargo.toml  README.md
oqueue-server/migrations/2020-10-15-201009_create_base/: down.sql  up.sql
oqueue-server/migrations/2021-02-09-072023_recreate_scheme/: up.sql
oqueue-server/migrations/2021-02-11-133928_add uniqu index to users.email/: up.sql
oqueue-server/migrations/2021-10-06-075058_not_null_organizer/: up.sql
oqueue-server/src/: configuration.rs  domain.rs  main.rs
oqueue-server/src/auth/: mod.rs
oqueue-server/src/db/: actions.rs  mod.rs  models.rs  schema.rs
oqueue-server/src/handlers/: mod.rs  req.rs
