[package]
name = "online_queue_server"
version = "0.1.0"
authors = ["vavus7 <vavus44375@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "^0.4"
env_logger = "^0.9"
dotenv = "^0.15"
serde = { version = "^1", features = ["derive"] }
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "^0.8", features = ["serde", "v4"] }
bcrypt = "^0.10"

actix-web = "4.0.0-beta.9"
actix-rt = "^2.2.0"
#actix-service = "1.0.6"
actix-web-httpauth = "0.6.0-beta.2"

tokio = { version = "^1", features = ["full"] }

jsonwebtoken = "8.0.0-beta.3"

# validate email format
# addr = "0.2.0"

diesel = { version = "^1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "^1.4"
r2d2 = "^0.8"

